// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.callout > rendering-callout-with-resizeAndDrag 1`] = `
.c5 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c3 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c4:not(:empty) {
  min-height: 72px;
}

.c4:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c2 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

.c0 {
  height: 100%;
  outline: none;
  cursor: move;
  transform-origin: left top;
}

.c0 .c1 {
  width: 490px;
}

.c0 > :not(.c1) {
  width: 100%;
}

.c0 > :only-child {
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  height: 100%;
  overflow: auto;
}

.c0 > :only-child > :only-child {
  flex-grow: 1;
}

.c0 .handle {
  cursor: move;
}

.c0 .handle > * {
  cursor: move !important;
}

.c0 * {
  cursor: move !important;
}

.c0.resize-and-drag-content-animate-enter {
  background: rgb(255, 255, 255);
  transform: scaleX(0) scaleY(0);
}

.c0.resize-and-drag-content-animate-enter > * {
  opacity: 0;
}

.c0.resize-and-drag-content-animate-enter-active,
.c0.resize-and-drag-content-animate-exit {
  transform: scaleX(1) scaleY(1);
}

.c0.resize-and-drag-content-animate-enter-active > *,
.c0.resize-and-drag-content-animate-exit > * {
  transition: opacity ease-in-out;
  opacity: 1;
}

.c0.resize-and-drag-content-animate-enter-active {
  transition: transform cubic-bezier(0.17, 0.88, 0.33, 1.13);
}

.c0.resize-and-drag-content-animate-exit {
  background: rgb(255, 255, 255);
}

.c0.resize-and-drag-content-animate-exit-active {
  transform: scaleX(0) scaleY(0);
  transition: transform cubic-bezier(0.17, 0.88, 0.33, 1);
}

.c0.resize-and-drag-content-animate-exit-active > * {
  opacity: 0;
  transition: opacity ease-in-out;
}

.c0.resize-and-drag-content-animate-exit-done {
  opacity: 0;
}

<div
  class="portal base"
  data-role="portal"
>
  <div>
    <div
      class="react-draggable"
      style="position: absolute; user-select: auto; width: auto; height: auto; display: inline-block; top: 0px; left: 0px; cursor: move; transform: translate(0px, 0px); max-width: 1280px; max-height: 720px; min-width: 320px; box-sizing: border-box; flex-shrink: 0;"
    >
      <div
        class="c0 resize-and-drag-content-wrapper"
        data-role="resize-and-drag-content"
        role="dialog"
        style="outline: transparent solid 1px;"
        tabindex="-1"
      >
        <div
          class="c1 c2 callout"
          data-role="callout"
        >
          <div
            class="c3 callout__inner"
            data-role="callout-inner"
          >
            <div
              class="c4 callout__body"
              data-role="callout-body"
            />
          </div>
        </div>
      </div>
      <div
        class="tab-sandbox-supporter"
        data-role="tab-sandbox-supporter"
        tabindex="0"
      />
      <div>
        <div
          style="position: absolute; user-select: none; width: 100%; height: 5px; top: 0px; left: 0px; cursor: ns-resize;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 100%; top: 0px; cursor: ew-resize; right: 0px;"
        />
        <div
          style="position: absolute; user-select: none; width: 100%; height: 5px; left: 0px; cursor: ns-resize; bottom: 0px;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 100%; top: 0px; left: 0px; cursor: ew-resize;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 5px; z-index: 1; right: 0px; top: 0px; cursor: nesw-resize;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 5px; z-index: 1; right: 0px; bottom: 0px; cursor: nwse-resize;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 5px; z-index: 1; left: 0px; bottom: 0px; cursor: nesw-resize;"
        />
        <div
          style="position: absolute; user-select: none; width: 5px; height: 5px; z-index: 1; left: 0px; top: 0px; cursor: nwse-resize;"
        />
      </div>
    </div>
    <div
      class="c5"
      data-role="portal-placeholder"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout > rendering-default-callout 1`] = `
.c5 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c0 {
  display: flex;
  max-height: 100vh;
  outline: transparent solid 0px;
  position: absolute;
}

.c0 > * {
  max-height: inherit;
}

.c3 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c4:not(:empty) {
  min-height: 72px;
}

.c4:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c2 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

.c1 {
  position: fixed;
}

<div
  class="portal base"
  data-role="portal"
>
  <div>
    <div
      class="c0 attached-portal h_bottom c1"
      data-role="attached-portal"
      style="top: 21px; left: 0px; visibility: visible; opacity: 1; max-height: 689px; max-width: 1280px;"
      tabindex="-1"
    >
      <div
        class="c2 callout"
        data-role="callout"
      >
        <div
          class="c3 callout__inner"
          data-role="callout-inner"
        >
          <div
            class="c4 callout__body"
            data-role="callout-body"
          >
            <p>
              body
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tab-sandbox-supporter"
      data-role="tab-sandbox-supporter"
      tabindex="0"
    />
    <div
      class="c5"
      data-role="portal-placeholder"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-inner-container 1`] = `
.c6 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c6 > span {
  display: inline-block;
}

.c6.c6 {
  max-width: unset;
}

.c4 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c4 .c5 {
  user-select: none;
}

.c4 .c5 {
  color: inherit;
}

.c4 .c5 {
  font-size: inherit;
}

.c4:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c4.c4 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c4.c4 > .c5 {
  display: block;
}

.c1 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 0px 16px 16px;
}

.c2 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  flex-shrink: 0;
  min-height: 48px;
}

.c7 {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.c7 > :first-child {
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  line-height: 1.45;
  margin: 0px;
}

.c8 {
  align-self: center;
  display: flex;
  flex: 0 0 auto;
  gap: 8px;
}

.c8 .c3 {
  font-size: 1.25rem;
  width: auto;
  height: auto;
  min-height: 0px;
}

.c8 .c5 {
  font-size: 1.25rem;
}

.c9 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c9:not(:empty) {
  min-height: 72px;
}

.c9:not(:empty) + .c10 {
  border-top: 1px solid rgb(226, 230, 233);
  max-height: calc(100% - 120px);
}

.c9:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c11 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
  padding: 8px 0px;
  min-height: 48px;
  max-height: 100%;
  overflow: hidden;
  gap: 8px;
}

.c11 > * {
  padding: 0px 16px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

@media (pointer: coarse) {
  .c4:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c4:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c4:hover {
    outline: transparent solid 1px;
  }
}

<div
  class="c0 callout"
  data-role="callout"
>
  <div
    class="c1 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c2 callout__header"
      data-role="callout-header"
    >
      <div
        class="callout__header-prefix"
        data-role="callout-header-prefix"
      >
        <button
          class="c3 c4 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c5 c6 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              chevron_left
            </span>
          </i>
        </button>
      </div>
      <div
        class="c7 callout__header-title"
        data-role="callout-header-title"
      >
        header
      </div>
      <div
        class="c8 callout__header-suffix"
        data-role="callout-header-suffix"
      >
        <button
          class="c3 c4 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c5 c6 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              close
            </span>
          </i>
        </button>
      </div>
    </div>
    <div
      class="c9 callout__body"
      data-role="callout-body"
    >
      body
    </div>
    <div
      class="c10 c11 callout__footer"
      data-role="callout-footer"
    >
      footer
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-template 1`] = `
.c1 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c2 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c2:not(:empty) {
  min-height: 72px;
}

.c2:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

<div
  class="c0 callout"
  data-role="callout"
>
  <div
    class="c1 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c2 callout__body"
      data-role="callout-body"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-template-with-define-padding 1`] = `
.c1 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c2 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c2:not(:empty) {
  min-height: 72px;
}

.c2:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

<div
  class="c0 callout"
  data-role="callout"
>
  <div
    class="c1 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c2 callout__body"
      data-role="callout-body"
      style="padding: 10px;"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-template-with-properties 1`] = `
.c2 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c1 {
  background-color: rgb(255, 225, 128);
  outline: transparent solid 1px;
  position: absolute;
  pointer-events: none;
  height: 10px;
  width: 10px;
}

.c3 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c3:not(:empty) {
  min-height: 72px;
}

.c3:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

<div
  class="c0 callout callout--hasPointer test-class"
  data-role="callout"
  id="test-id"
  style="color: red;"
>
  <div
    class="c1 callout__pointer"
    data-role="callout-pointer"
  />
  <div
    class="c2 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c3 callout__body"
      data-role="callout-body"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-template-with-resizeAndDrag 1`] = `
.c1 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 0px 16px 16px;
}

.c2 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  flex-shrink: 0;
  min-height: 48px;
}

.c3 {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.c3 > :first-child {
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  line-height: 1.45;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c4:not(:empty) {
  min-height: 72px;
}

.c4:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

<div
  class="c0 callout"
  data-role="callout"
>
  <div
    class="c1 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c2 callout__header"
      data-role="callout-header"
    >
      <div
        class="c3 callout__header-title handle"
        data-role="callout-header-title"
      >
        header
      </div>
    </div>
    <div
      class="c4 callout__body"
      data-role="callout-body"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.callout.template > rendering-callout-template-with-zero-padding 1`] = `
.c1 {
  background-color: rgb(255, 225, 128);
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 16px;
}

.c2 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.45;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  padding: 16px;
  position: relative;
}

.c2:not(:empty) {
  min-height: 72px;
}

.c2:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  display: flex;
  flex-direction: column;
  min-width: 0px;
  outline: transparent solid 1px;
  position: relative;
  width: 490px;
}

<div
  class="c0 callout"
  data-role="callout"
>
  <div
    class="c1 callout__inner"
    data-role="callout-inner"
  >
    <div
      class="c2 callout__body"
      data-role="callout-body"
      style="padding: 0px;"
    />
  </div>
</div>
`;
